--- a/assets/css/header/page-header.scss
+++ b/assets/css/header/page-header.scss
@@ -111,6 +111,11 @@
       .donate {
         display: inline;
       }
+
+      .rss,
+      .atom {
+        margin-right: 0.2em;
+      }
     }
 
     .quicklinks {
